feat: add transaction update payment api
